RESOLVED FIXED283924
REGRESSION(285421@main): Crash when restoring session state while a provisional history item is set
https://bugs.webkit.org/show_bug.cgi?id=283924
Summary REGRESSION(285421@main): Crash when restoring session state while a provision...
Charlie Wolfe
Reported 2024-12-02 10:41:19 PST
Attachments
Charlie Wolfe
Comment 1 2024-12-02 10:44:02 PST
EWS
Comment 2 2024-12-02 19:09:53 PST
Committed 287248@main (60a5f04e58e1): <https://commits.webkit.org/287248@main> Reviewed commits have been landed. Closing PR #37326 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.